# response_selection

./: README.md  pyproject.toml
notebooks/: validate_dataset.ipynb
response_selection/data/: dataset.py
scripts/: preprocess_txt_file_to_jsonl.py  train.py
